bug alignment in project container

--- a/styles.css
+++ b/styles.css
@@ -490,7 +490,8 @@ body::-webkit-scrollbar-thumb {
 }
 
 .desc-container {
-  height: 200px;
+  /* height: 200px; */ 
+  max-height: 200px;
   display: flex;
   justify-content: space-between;
 }
